@@ -74,7 +74,8 @@ static struct file_operations fifo_fops =
   pipecommon_read,  /* read */
   pipecommon_write, /* write */
   0,                /* seek */
-  0                 /* ioctl */
+  0,                /* ioctl */
+  0                 /* poll */
 };
 
 /****************************************************************************
