@@ -82,7 +82,8 @@ static struct file_operations pipe_fops =
   pipecommon_read,   /* read */
   pipecommon_write,  /* write */
   0,                 /* seek */
-  0                  /* ioctl */
+  0,                 /* ioctl */
+  0,                 /* pipe */
 };
 
 static sem_t  g_pipesem     = { 1 };
